--- a/src/components/styles/asistentesList.css
+++ b/src/components/styles/asistentesList.css
@@ -1,20 +1,13 @@
 
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto Slab', serif ;
-
-}
-.container {
-    width: 50%;
+.containerAsistente {
+    width: 85%;
     min-width: 600px;
     padding: 3%;
     display: flex;
     flex-direction: column;
 }
-.body {
-    background-color: #C4C4C4;
+.bodyAsistentesList {
+    background-color: #D4d1d1;
     display: flex;
     flex-direction: row;
     padding: 2%;
@@ -26,31 +19,27 @@
 
 
 }
-.title {
-    font-size: large;
-    justify-content: left;
-    align-self: flex-start;
-    padding-left: 2%;
-    font-weight: lighter;
-    font-size: 40px;
-}
-.body label {
+
+.bodyAsistentesList label {
     padding: 1%;
-    font-weight: lighter;
 }
-.column {
+
+.card .column {
     margin: 1%;
     justify-content: space-around;
     text-align: center;
+    min-width: 17%;
     
 
 }
 .column p {
     padding: 2%;
     font-weight: lighter;
+    justify-content: center;
+    
 }
 
-button {
+.button {
     border-radius: 20px;
     height: 30px;
     width: 100%;
@@ -62,7 +51,18 @@ button {
     justify-content: center;
     padding: 1%;
     font-weight:bold;
-    font-size: medium;
+    font-size: 20px;
 
 }
-
+.card h1 {
+    width: 100%;
+    min-width: 17%;
+    display: flex;
+    flex-direction: column;
+    align-items: center!important;
+    justify-content: space-around!important;
+    height: 125px;
+    font-size: 36px;
+    font-weight: lighter;
+    margin-bottom: 5px;
+}
