--- a/src/components/styles/header.css
+++ b/src/components/styles/header.css
@@ -6,20 +6,26 @@
     padding: 5px;
     box-sizing: border-box;
     width: 100%;
-    
+    min-width: 768px;
 }
-
 .imgLogo {
-    align-self: center;
+    width: 140px;
+    height: 100px;
+    display: flex;
 }
 
-.title {
+.title h1{
+    display: flex;
     align-self: center;
+    justify-content: center;
+    padding: 25px;
 }
 
 .exitContainer {
     display: flex;
+    flex-direction: row;
     align-self: center;
+    justify-content: center;
     padding: 8px;
 }
 
@@ -29,9 +35,15 @@
     height: 41px;
     
 }
+.exitContainer h1 {
+    font-size: 26px;
+    
+
+}
 
 .iconExit {
     width: 100%;
     height: 100%;
 }
+
 
