--- a/src/components/styles/nuevaCapacitacionForm.css
+++ b/src/components/styles/nuevaCapacitacionForm.css
@@ -1,12 +1,5 @@
 
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto Slab', serif ;
-
-}
-.container {
+.container_nuevaCapacitacion {
     width: 90%;
     min-width: 550px;
     padding: 3%;
@@ -22,39 +15,42 @@
     margin: 1%;
     width: 100%;
     font-weight: lighter;
+    font-size: 20px;
 
 }
-.mainTitle {
-    height: 135px;
+.mainTittle h1{
     display: flex;
     flex-direction: column;
-    align-content: center;
-    justify-content: center;
-
+    align-items: flex-start;
+    justify-content: flex-end;
+    height: 125px;
+    font-size: 36px;
+    font-weight: lighter;
+    margin-bottom: 5px;
 }
-.mainTitle h1 {
-    align-self: left;
-
-}
-.tile {
-    font-size: large;
+    
+.title {
+    font-size: 40px;
     justify-content: left;
     align-self: flex-start;
     padding-left: 2%;
-    font-weight: lighter;
+
 }
 .select label {
     padding: 1%;
     font-weight: lighter;
 }
-input {
+
+.bodyCapacitacion input {
     border-radius: 20px;
     height: 30px;
-    width: 100%;
+    width: auto;
     padding-left: 3%;
+    margin: 7px;
+    border-style: none;
 
 }
-button {
+.bodyCapacitacion button {
     border-radius: 20px;
     height: 30px;
     width: 30%;
@@ -64,6 +60,7 @@ button {
     border-style: none;
     margin: 1%;
     align-self: flex-end;    
+    font-size: 20px;
 
 }
 .selectContainer {
@@ -92,5 +89,12 @@ select {
 textarea {
     border-radius: 20px;
     width: 100%;
+    padding: 2%;
 }
-
+.select input[type="date" i] {
+    border-radius: 20px;
+    height: 30px;
+    width: 100%;
+    padding: 3%;
+    margin: 0%!important;
+}
