asistentes delete agregado, cambiado formato hora

--- a/src/components/styles/asistentesView.css
+++ b/src/components/styles/asistentesView.css
@@ -117,4 +117,8 @@ label {
     margin: 1%;
     align-self: flex-end; 
 }
+.buttonsAsistentes {
+    display: flex;
+    justify-content: space-around;
+}
 
