--- a/src/components/styles/nuevaCapacitacionForm.css
+++ b/src/components/styles/nuevaCapacitacionForm.css
@@ -39,6 +39,7 @@
 .select label {
     padding: 1%;
     font-weight: lighter;
+    min-height: 200px;
 }
 
 .bodyCapacitacion input {
@@ -76,7 +77,22 @@
 .select {
     width: 30%;
     padding: 1%;
-    min-width: 32%;
+    
+}
+.multiselect {
+    width: 30%;
+    padding: 1%;
+    min-width: 320px;
+    width: 400px;
+    height: 100%;
+    
+}
+.multiselect select {
+    width: 50%;
+    padding: 1%;
+    min-width: 320px;
+    width: 400px;
+    padding: 2%;
     
 }
 select {
