--- a/src/components/styles/asistentesList.css
+++ b/src/components/styles/asistentesList.css
@@ -19,6 +19,14 @@
 
 
 }
+.title {
+    display: flex;
+    align-items: center;
+    
+}
+.title input {
+    min-width: 130px;
+}
 
 .bodyAsistentesList label {
     padding: 1%;
