add informe e historial con pdfs

--- a/src/components/styles/informes.css
+++ b/src/components/styles/informes.css
@@ -35,7 +35,8 @@
 }
 section table {
     display: column;
-    width: 100%;
+    width: 98%;
+    margin: 1%;
 }
 .searchBox {
     display: flex;
@@ -59,4 +60,16 @@ td {
 th {
     padding: 5px;
 
+}
+img {
+    width: 150px;
+    height: 100px;
+}.primerTitulo {
+    display: column;
+    text-align: center;
+    background-color: rgba(228,103,19,1);
+    color: white;
+}
+.segundoTitulo {
+text-align: center;
 }
