--- a/src/components/styles/capacitacionView.css
+++ b/src/components/styles/capacitacionView.css
@@ -102,11 +102,11 @@ input {
 .buttonsCapacitaciones {
     display: flex;
     justify-content: space-around;
+    align-self: stretch;
 }
-
 .button {
     border-radius: 20px;
-    height: 30px;
+    height: 100%;
     width: 30%;
     background-color: #A8D6FF;
     color: black;
@@ -116,4 +116,6 @@ input {
     align-self: flex-end;
     font-size: 20px;
     text-align: center;
+    ;
 }
+
