--- a/src/components/styles/addAsistentes.css
+++ b/src/components/styles/addAsistentes.css
@@ -64,7 +64,7 @@ input {
     padding: 1%;
     background-color: white;
     border-radius: 20px;
-    height: 30px;
+    height: 100%;
     width: 97%;
     padding-left: 4%;
     padding-top: 5px;
