--- a/src/components/styles/capacitacionEdit.css
+++ b/src/components/styles/capacitacionEdit.css
@@ -35,7 +35,9 @@ input {
     border-radius: 20px;
     height: 30px;
     width: 100%;
-    padding-left: 3%;
+    padding-left: 2%;
+    padding: 1%;
+
 
 }
 .bodyCapacitacionEdit button {
