add buscador de capac y movido boton de carga

--- a/src/components/styles/Capacitacion.css
+++ b/src/components/styles/Capacitacion.css
@@ -17,6 +17,11 @@
     font-weight: lighter;
     margin-bottom: 5px;
 }
+.title {
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
 
 .card{
     display: flex;
