--- a/src/components/styles/asistentesList.css
+++ b/src/components/styles/asistentesList.css
@@ -2,9 +2,19 @@
 .containerAsistente {
     width: 90%;
     min-width: 600px;
-    padding: 3%;
     display: flex;
     flex-direction: column;
+}
+.mainTittle_asistentes {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-end;
+    height: 125px;
+    font-size: 36px;
+    font-weight: lighter;
+    margin-bottom: 5px;
 }
 .bodyAsistentesList {
     background-color: #D4d1d1;
