ADD DATE FILTER TO HISTORIAL

--- a/src/components/styles/header.css
+++ b/src/components/styles/header.css
@@ -9,9 +9,11 @@
     min-width: 768px;
 }
 .imgLogo {
-    width: 140px;
+    width: 50%;
     height: 100px;
     display: flex;
+    justify-content: center;
+
 }
 
 .title h1{
