--- a/src/components/styles/layout.css
+++ b/src/components/styles/layout.css
@@ -40,7 +40,7 @@ html {
     align-self: left;
 
 }
-@media (max-width:770px){
+@media (max-width:768px){
     body {
         font-size: 16px;
     }
@@ -83,10 +83,53 @@ html {
     .column p {
         font-size: 0.4em;
     }
-    .mainHeader2 {
+    .mainHeader a {
         display: none;
     }
     .mainBoard {
         width: 70%;
     }
   }
+
+  @media (max-width: 390px){
+    body {
+        font-size: 16px;
+    }
+    .buttonContainer {
+        width: 30%;
+    }
+    .addButton {
+        min-width: auto;
+    }
+    .Menu {
+        display: none;
+    }
+    .card {
+        flex-wrap: nowrap;
+        flex: auto;
+        min-width: 380px!important;
+        max-width: 381px!important;
+        font-size: 16px!important;
+
+    }
+    .viewContainer{
+        display: none;    
+    }
+    .card p {
+        width: 100%;
+    }
+    .column p {
+        font-size: 0.4em;
+    }
+    .mainBoard {
+        width: 90%;
+    }
+    .mainHeader h1 {
+        justify-content: space-around;
+        font-size: 1.2em;
+    }
+    .mainHeader h1 {
+        display: auto;
+        margin-bottom: 1%;
+    }
+ }
