--- a/src/components/styles/login.css
+++ b/src/components/styles/login.css
@@ -1,33 +1,42 @@
 .loginBackground {
     background-image: url('../../images/background.png');
-    background-color: red;
+    background-color: transparent;
+    background-repeat: no-repeat;
+    background-size: cover;
     height: 100vh;
     display: flex;
+
     
 }
 
-.mainTittle {
+.mainTittleLogin {
     color: wheat;
     justify-content: center;
     
 }
 .loginSection {
-    background-color: red;
     width: 40%;
     align-self: center;
     border-radius: 2rem;
     height: 80%;
-    box-shadow: 10px 15px 10px rgba(0,0,0,0.1);
+    box-shadow: 10px 15px 10px rgba(0,0,0,0.5);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+.loginBackground .title {
+    align-self: center;
     display: flex;
     flex-direction: column;
-
-}
-.title {
-    align-self: center;
 }
 
 .buttonLogin {
+    display: flex;
     justify-content: center;
-    width: 80%;
-    align-self: center;
+    
+}
+.buttonLogin button {
+    width: auto;
+    height: auto;
 }
