--- a/src/components/styles/header.css
+++ b/src/components/styles/header.css
@@ -28,19 +28,20 @@
     flex-direction: row;
     align-self: center;
     justify-content: center;
-    padding: 8px;
+    padding-inline: 1%;
 }
 
 .iconContainer {
     align-self: center;
-    width: 41px;
-    height: 41px;
-    
+    width: 100%;
+    height: 100%;
+   
 }
-.exitContainer h1 {
+.exitContainer button {
     font-size: 26px;
-    
-
+    width: 100%;
+    padding: 10%;
+    justify-content: center;
 }
 
 .iconExit {
