--- a/src/components/styles/login.css
+++ b/src/components/styles/login.css
@@ -1,14 +1,3 @@
-.loginBackground {
-    background-image: url('../../images/background.png');
-    background-color: transparent;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
-    display: flex;
-
-    
-}
-
 .mainTittleLogin {
     color: wheat;
     justify-content: center;
@@ -23,7 +12,8 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    align-items: center;
+    align-items: center;  
+    background-color: red;  
 }
 .loginBackground .title {
     align-self: center;
