--- a/src/components/styles/nuevoAsistente.css
+++ b/src/components/styles/nuevoAsistente.css
@@ -29,7 +29,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-end;
+    justify-content: center;
     height: 125px;
     font-size: 36px;
     font-weight: lighter;
