--- a/src/components/styles/layout.css
+++ b/src/components/styles/layout.css
@@ -83,7 +83,7 @@ html {
     .column p {
         font-size: 0.4em;
     }
-    .mainHeader a {
+    .secondHeader {
         display: none;
     }
     .mainBoard {
