--- a/src/components/googleSignIn/login.css
+++ b/src/components/googleSignIn/login.css
@@ -7,13 +7,22 @@
     height: 100vh;
     background-image: url("../../../src/images/background.png");
     justify-content: right;
+    background-repeat: no-repeat;
+    background-size: cover;
+
     margin: 0%;
+
 }
 .loginPage {
     width: 80vh;
     margin: 10%;
     border: 5%;
 }
+.loginSection img {
+    width: 100%;
+    height: 100%;
+}
+
 form {
     width: 90%;
 }
